--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ flutter:
 
   assets:
     - assets/items.json
+    - assets/images/
+    
 
   # To add assets to your application, add an assets section, like this:
   # assets:
