--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,15 @@ dependencies:
     sdk: flutter
   hive:
   hive_flutter:
+  http:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  cached_network_image: ^3.4.1
+  footer:
+  provider:
+
 
 dev_dependencies:
   flutter_test:
